# planviz

./: .eslintrc.cjs  .gitignore  index.html  package.json  plan.md  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
@docs/: implementation-plan.md  learnings.md  product-plan.md  progress.md
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/src/: agent.rs  chat.rs  cli.rs  credentials.rs  history.rs  layout.rs  main.rs  preferences.rs  pty.rs  watcher.rs
src/canvas/: PlanCanvas.tsx  index.ts  shapes.ts
src/components/: ConflictBanner.tsx  QuickActions.tsx
src/components/chat/: AgentSelector.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  index.ts
src/components/terminal/: Terminal.tsx
src/components/ui/: button.tsx  scroll-area.tsx  skeleton.tsx  toast.tsx
src/hooks/: index.ts  useFileWatcher.ts  useKeyboardShortcuts.ts
src/lib/: utils.ts
src/parser/: index.ts  parser.ts  schema.ts  serializer.ts
src/parser/__tests__/: parser.test.ts
src/parser/__tests__/fixtures/: complex-plan.md  simple-plan.md
src/store/: agentStore.ts  chatStore.ts  index.ts  planStore.ts  preferencesStore.ts  terminalStore.ts
src/types/: index.ts
