[package]
name = "plan-visualizer"
version = "0.0.0"
description = "Plan visualizer app"
authors = ["Planviz"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"
tokio = { version = "1", features = ["time", "sync", "io-util", "rt"] }
portable-pty = "0.8"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
